[tool.poetry]
name = "brewblox-tilt"
version = "1.2.3"
description = "Tilt hydrometer service for BrewBlox"
authors = ["James Sandford <brewblox-tilt@j616s.co.uk>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
brewblox-service = "^0.25.0"
poetry = "^1.0.5"
pint = "^0.11"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0.4"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
pytest-aiohttp = "^0.3.0"
flake8 = "^3.7.9"
autopep8 = "^1.5"
pytest = "^5.4.1"
flake8-quotes = "^3.0.0"
aresponses = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"